Pretty much done

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <div id="contentScoreboard">
         <div id="contentPlayer1">
             <label id="labelP1" for="player1">Player1</label>
-            <div id="player1Scoreboard">Centro?</div>
+            <div id="player1Scoreboard">0</div>
             <input type="button" name="player1" id="player1Plus" value="+">
             <input type="button" name="player1" id="player1Minus" value="-">
         </div>
-        
         <span id="versus">&#215</span>
-
         <div id="contentPlayer2">
             <label for="player2"id="labelP2">Player2</label>
-            <div id="player2Scoreboard">Centro?</div>
+            <div id="player2Scoreboard">0</div>
             <input type="button" name="player2" id="player2Plus" value="+">
             <input type="button" name="player2" id="player2Minus" value="-">
         </div>
