General align player label

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 <body>
     <div id="contentScoreboard">
         <div id="contentPlayer1">
-            <label id="labelP1" for="player1">Player1</label>
+            <div class="playerNameStyle">
+                <label id="labelP1" for="player1">Player1</label>
+            </div>
             <div id="player1Scoreboard">0</div>
             <input type="button" name="player1" id="player1Plus" value="+">
             <input type="button" name="player1" id="player1Minus" value="-">
         </div>
         <span id="versus">&#215</span>
         <div id="contentPlayer2">
+        <div class="playerNameStyle">
             <label for="player2"id="labelP2">Player2</label>
+        </div>
             <div id="player2Scoreboard">0</div>
             <input type="button" name="player2" id="player2Plus" value="+">
             <input type="button" name="player2" id="player2Minus" value="-">
