Added a button to auto set the score to zero!

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <input type="button" name="player2" id="player2Minus" value="-">
         </div>
     </div>
+    <input  id="autoClear" type="button" name="autoClearButton" value="Auto Clear">
     <script src="functions.js"></script>
 </body>
 </html>
